# eclean-kernel2

./: .gitignore  COPYING  Makefile.am  README  configure.ac
src/: main.cxx
src/ek2/: actions.cxx  actions.h  bootloader.cxx  bootloader.h  bootloaders.cxx  bootloaders.h  file.cxx  file.h  files.cxx  files.h  fileset.cxx  fileset.h  judge.cxx  judge.h  judges.cxx  judges.h  layout.cxx  layout.h  layouts.cxx  layouts.h  options.cxx  options.h  sorts.cxx  sorts.h
src/ek2/bootloaders/: grub2.cxx  grub2.h
src/ek2/files/: builddir.cxx  builddir.h  genericfile.cxx  genericfile.h  kernelfile.cxx  kernelfile.h  modulesdir.cxx  modulesdir.h
src/ek2/judges/: cleanstale.cxx  cleanstale.h  keepcommonfiles.cxx  keepcommonfiles.h  keepnewest.cxx  keepnewest.h  protectrunning.cxx  protectrunning.h
src/ek2/layouts/: std.cxx  std.h
src/ek2/util/: directorystream.cxx  directorystream.h  error.cxx  error.h  relativepath.cxx  relativepath.h  subprocess.cxx  subprocess.h
