ACLOCAL_AMFLAGS = -I build-aux
AM_CXXFLAGS = -std=c++11
AM_CPPFLAGS = -I$(top_srcdir)/src

bin_PROGRAMS = eclean-kernel

eclean_kernel_SOURCES = \
	src/ek2/file.cxx \
	src/ek2/file.h \
	src/ek2/files.cxx \
	src/ek2/files.h \
	src/ek2/fileset.cxx \
	src/ek2/fileset.h \
	src/ek2/layout.cxx \
	src/ek2/layout.h \
	src/ek2/layouts/std.cxx \
	src/ek2/layouts/std.h \
	src/ek2/layouts.cxx \
	src/ek2/layouts.h \
	src/ek2/util/directorystream.cxx \
	src/ek2/util/directorystream.h \
	src/main.cxx
